#127. Set the body to a fixed width and disabled horizontal scrolling to ensure the scroll bar does not jump to the center on iphones. Updated the navDrawerOpen logic to only disable and enable y-axis scrolling. Updated the carousel to no longer use arrows instead of just making them invisible as was done in #115

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,18 +21,15 @@
       transform: none;
       left: unset;
     }
-    .pinSize{
+    .pinSize {
       max-width: 60px;
     }
   }
 }
 
-
-
 /* Box Model Hack */
 * {
   box-sizing: border-box;
-
 }
 
 .flexThisBox {
@@ -77,6 +74,12 @@ body {
   font-family: "Poppins", "Lato", "Garamond";
 }
 
+html,
+body {
+  overflow-x: hidden !important;
+  max-width: 100% !important;
+}
+
 /******************************************
 /* GLOBAL LAYOUT
 /*******************************************/
@@ -115,7 +118,7 @@ body {
   filter: drop-shadow(2px 2px 2px black);
 }
 
-.mobileNav{
+.mobileNav {
   height: 110vh !important;
   width: 100vw !important;
   background-color: blue;
@@ -204,7 +207,6 @@ body {
   background-color: transparent;
 }
 
-
 /* ///////////////////////////////////// */
 
 /* WHAT WE DO SECTION */
@@ -223,7 +225,6 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
 
 .tabTitles {
   color: rgb(157, 181, 205);
